Allow voice mute before start via intro control

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div id="intro">
+        <button id="intro-voice-link" onclick="event.stopPropagation(); toggleVoiceMute();">VOICE: ON</button>
         <button id="intro-settings-link" onclick="event.stopPropagation(); toggleSettings(true);">SETTINGS</button>
         <div class="watch-face" onclick="startWorkout()" role="button" aria-label="Start workout" tabindex="0">
             <div class="watch-brand">HIIT TIMER</div>
